--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -2,44 +2,71 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "9f902b7d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dependencies\n",
+    "from splinter import Browser\n",
     "from bs4 import BeautifulSoup\n",
     "import requests\n",
-    "import pymongo"
+    "import pymongo\n",
+    "from webdriver_manager.chrome import ChromeDriverManager"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "700972c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Initialize PyMongo to work with MongoDBs\n",
+    "# conn = 'mongodb://localhost:27017'\n",
+    "# client = pymongo.MongoClient(conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9c19691d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "====== WebDriver manager ======\n",
+      "Current google-chrome version is 94.0.4606\n",
+      "Get LATEST driver version for 94.0.4606\n",
+      "Driver [/Users/bradleybarker/.wdm/drivers/chromedriver/mac64/94.0.4606.61/chromedriver] found in cache\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Setup splinter\n",
+    "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
+    "browser = Browser('chrome', **executable_path, headless=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a3120716",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Define database and collection\n",
+    "# db = client.mars_news_db\n",
+    "# collection = db.items"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "700972c6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize PyMongo to work with MongoDBs\n",
-    "conn = 'mongodb://localhost:27017'\n",
-    "client = pymongo.MongoClient(conn)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "a3120716",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define database and collection\n",
-    "db = client.mars_news_db\n",
-    "collection = db.items"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
    "id": "6497f696",
    "metadata": {},
    "outputs": [],
@@ -47,10 +74,100 @@
     "# URL of page to be scraped\n",
     "url = 'https://redplanetscience.com/'\n",
     "\n",
-    "# Retrieve page with the requests module\n",
-    "response = requests.get(url)\n",
-    "# Create BeautifulSoup object; parse with 'lxml'\n",
-    "soup = BeautifulSoup(response.text, 'lxml')"
+    "# # Retrieve page with the requests module\n",
+    "# response = requests.get(url)\n",
+    "# # Create BeautifulSoup object; parse with 'lxml'\n",
+    "# soup = BeautifulSoup(response.text, 'lxml')\n",
+    "\n",
+    "browser.visit(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b97eb4b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------\n",
+      "7 Things to Know About the Mars 2020 Perseverance Rover Mission\n",
+      "NASA's next rover to the Red Planet is slated to launch no earlier than July 30. These highlights will get you up to speed on the ambitious mission.\n",
+      "-------------\n",
+      "NASA Mars Mission Connects With Bosnian and Herzegovinian Town\n",
+      "A letter from NASA was presented to the mayor of Jezero, Bosnia-Herzegovina, honoring the connection between the town and Jezero Crater, the Mars 2020 rover landing site.\n",
+      "-------------\n",
+      "While Stargazing on Mars, NASA's Curiosity Rover Spots Earth and Venus\n",
+      "This new portrait of the Red Planet's neighbors was taken during a time when there's more dust in the air on Mars.\n",
+      "-------------\n",
+      "Hear Audio From NASA's Perseverance As It Travels Through Deep Space\n",
+      "The first to be rigged with microphones, the agency's latest Mars rover picked up the subtle sounds of its own inner workings during interplanetary flight.\n",
+      "-------------\n",
+      "NASA Updates Mars 2020 Mission Environmental Review\n",
+      "NASA and the Department of Energy have completed a more detailed risk analysis for the Mars 2020 rover launch from Florida.\n",
+      "-------------\n",
+      "Celebrate Mars Reconnaissance Orbiter's Views From Above\n",
+      "Marking its 15th anniversary since launch, one of the oldest spacecraft at the Red Planet has provided glimpses of dust devils, avalanches, and more.\n",
+      "-------------\n",
+      "The Man Who Wanted to Fly on Mars\n",
+      "The Mars Helicopter is riding to the Red Planet this summer with NASA's Perseverance rover. The helicopter's chief engineer, Bob Balaram, shares the saga of how it came into being.\n",
+      "-------------\n",
+      "NASA to Hold Mars 2020 Perseverance Rover Launch Briefing\n",
+      "Learn more about the agency's next Red Planet mission during a live event on June 17.\n",
+      "-------------\n",
+      "Follow NASA's Perseverance Rover in Real Time on Its Way to Mars\n",
+      "A crisply rendered web application can show you where the agency's Mars 2020 mission is right now as it makes its way to the Red Planet for a Feb. 18, 2021, landing.\n",
+      "-------------\n",
+      "Join NASA for the Launch of the Mars 2020 Perseverance Rover\n",
+      "No matter where you live, choose from a menu of activities to join NASA as we \"Countdown to Mars\" and launch the Perseverance rover to the Red Planet.\n",
+      "-------------\n",
+      "From JPL's Mailroom to Mars and Beyond\n",
+      "Bill Allen has thrived as the mechanical systems design lead for three Mars rover missions, but he got his start as a teenager sorting letters for the NASA center.\n",
+      "-------------\n",
+      "Meet the People Behind NASA's Perseverance Rover\n",
+      "These are the scientists and engineers who built NASA's next Mars rover and who will guide it to a safe landing in Jezero Crater. \n",
+      "-------------\n",
+      "Q&A with the Student Who Named Ingenuity, NASA's Mars Helicopter\n",
+      "As a longtime fan of space exploration, Vaneeza Rupani appreciates the creativity and collaboration involved with trying to fly on another planet.\n",
+      "-------------\n",
+      "NASA's Mars Perseverance Rover Passes Flight Readiness Review\n",
+      "​The agency's Mars 2020 mission has one more big prelaunch review – the Launch Readiness Review, on July 27.\n",
+      "-------------\n",
+      "Naming a NASA Mars Rover Can Change Your Life\n",
+      "Want to name the robotic scientist NASA is sending to Mars in 2020? The student who named Curiosity — the rover currently exploring Mars — will tell you this is an opportunity worth taking.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in range(1):\n",
+    "    \n",
+    "    html = browser.html\n",
+    "    soup = BeautifulSoup(html, 'html.parser')\n",
+    "    \n",
+    "    results = soup.find_all('div', class_='list_text')\n",
+    "        \n",
+    "# Scrape first instance of News Title and Paragraph Text\n",
+    "for result in results:\n",
+    "\n",
+    "    # Error handling\n",
+    "    try:\n",
+    "        # Identify and return news title of listing\n",
+    "        news_title = result.find('div', class_='content_title').text\n",
+    "        # Identify and return price of listing\n",
+    "        paragraph_text = result.find('div', class_='article_teaser_body').text\n",
+    "\n",
+    "\n",
+    "        # Run only if news title and paragraph text are available\n",
+    "        if (news_title and paragraph_text):\n",
+    "            # Print results\n",
+    "            print('-------------')\n",
+    "            print(news_title)\n",
+    "            print(paragraph_text)\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(e)"
    ]
   },
   {
