corrected mission_to_mars file, removed MONGO one

--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "9f902b7d",
    "metadata": {},
    "outputs": [],
@@ -10,27 +10,13 @@
     "# Dependencies\n",
     "from splinter import Browser\n",
     "from bs4 import BeautifulSoup\n",
-    "import requests\n",
-    "import pymongo\n",
     "from webdriver_manager.chrome import ChromeDriverManager"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "700972c6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Initialize PyMongo to work with MongoDBs\n",
-    "# conn = 'mongodb://localhost:27017'\n",
-    "# client = pymongo.MongoClient(conn)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "9c19691d",
+   "execution_count": 2,
+   "id": "913fe554",
    "metadata": {},
    "outputs": [
     {
@@ -54,19 +40,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "a3120716",
+   "execution_count": null,
+   "id": "700972c6",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# # Define database and collection\n",
-    "# db = client.mars_news_db\n",
-    "# collection = db.items"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "id": "81cd5cb2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3120716",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "6497f696",
    "metadata": {},
    "outputs": [],
@@ -74,163 +72,80 @@
     "# URL of page to be scraped\n",
     "url = 'https://redplanetscience.com/'\n",
     "\n",
-    "# # Retrieve page with the requests module\n",
-    "# response = requests.get(url)\n",
-    "# # Create BeautifulSoup object; parse with 'lxml'\n",
-    "# soup = BeautifulSoup(response.text, 'lxml')\n",
+    "browser.visit(url)\n",
     "\n",
-    "browser.visit(url)"
+    "# Create BeautifulSoup object; parse with 'html.parser'\n",
+    "soup = BeautifulSoup(browser.html, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "b97eb4b7",
+   "execution_count": 4,
+   "id": "82378777",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-------------\n",
-      "7 Things to Know About the Mars 2020 Perseverance Rover Mission\n",
-      "NASA's next rover to the Red Planet is slated to launch no earlier than July 30. These highlights will get you up to speed on the ambitious mission.\n",
-      "-------------\n",
-      "NASA Mars Mission Connects With Bosnian and Herzegovinian Town\n",
-      "A letter from NASA was presented to the mayor of Jezero, Bosnia-Herzegovina, honoring the connection between the town and Jezero Crater, the Mars 2020 rover landing site.\n",
-      "-------------\n",
-      "While Stargazing on Mars, NASA's Curiosity Rover Spots Earth and Venus\n",
-      "This new portrait of the Red Planet's neighbors was taken during a time when there's more dust in the air on Mars.\n",
-      "-------------\n",
-      "Hear Audio From NASA's Perseverance As It Travels Through Deep Space\n",
-      "The first to be rigged with microphones, the agency's latest Mars rover picked up the subtle sounds of its own inner workings during interplanetary flight.\n",
-      "-------------\n",
-      "NASA Updates Mars 2020 Mission Environmental Review\n",
-      "NASA and the Department of Energy have completed a more detailed risk analysis for the Mars 2020 rover launch from Florida.\n",
-      "-------------\n",
-      "Celebrate Mars Reconnaissance Orbiter's Views From Above\n",
-      "Marking its 15th anniversary since launch, one of the oldest spacecraft at the Red Planet has provided glimpses of dust devils, avalanches, and more.\n",
-      "-------------\n",
-      "The Man Who Wanted to Fly on Mars\n",
-      "The Mars Helicopter is riding to the Red Planet this summer with NASA's Perseverance rover. The helicopter's chief engineer, Bob Balaram, shares the saga of how it came into being.\n",
-      "-------------\n",
-      "NASA to Hold Mars 2020 Perseverance Rover Launch Briefing\n",
-      "Learn more about the agency's next Red Planet mission during a live event on June 17.\n",
-      "-------------\n",
-      "Follow NASA's Perseverance Rover in Real Time on Its Way to Mars\n",
-      "A crisply rendered web application can show you where the agency's Mars 2020 mission is right now as it makes its way to the Red Planet for a Feb. 18, 2021, landing.\n",
-      "-------------\n",
-      "Join NASA for the Launch of the Mars 2020 Perseverance Rover\n",
-      "No matter where you live, choose from a menu of activities to join NASA as we \"Countdown to Mars\" and launch the Perseverance rover to the Red Planet.\n",
-      "-------------\n",
-      "From JPL's Mailroom to Mars and Beyond\n",
-      "Bill Allen has thrived as the mechanical systems design lead for three Mars rover missions, but he got his start as a teenager sorting letters for the NASA center.\n",
-      "-------------\n",
-      "Meet the People Behind NASA's Perseverance Rover\n",
-      "These are the scientists and engineers who built NASA's next Mars rover and who will guide it to a safe landing in Jezero Crater. \n",
-      "-------------\n",
-      "Q&A with the Student Who Named Ingenuity, NASA's Mars Helicopter\n",
-      "As a longtime fan of space exploration, Vaneeza Rupani appreciates the creativity and collaboration involved with trying to fly on another planet.\n",
-      "-------------\n",
-      "NASA's Mars Perseverance Rover Passes Flight Readiness Review\n",
-      "​The agency's Mars 2020 mission has one more big prelaunch review – the Launch Readiness Review, on July 27.\n",
-      "-------------\n",
-      "Naming a NASA Mars Rover Can Change Your Life\n",
-      "Want to name the robotic scientist NASA is sending to Mars in 2020? The student who named Curiosity — the rover currently exploring Mars — will tell you this is an opportunity worth taking.\n"
+      "<div class=\"list_text\">\n",
+      "<div class=\"list_date\">October 7, 2021</div>\n",
+      "<div class=\"content_title\">NASA's Perseverance Rover Mission Getting in Shape for Launch</div>\n",
+      "<div class=\"article_teaser_body\">Stacking spacecraft components on top of each other is one of the final assembly steps before a mission launches to the Red Planet. </div>\n",
+      "</div>\n"
      ]
     }
    ],
    "source": [
-    "for x in range(1):\n",
-    "    \n",
-    "    html = browser.html\n",
-    "    soup = BeautifulSoup(html, 'html.parser')\n",
-    "    \n",
-    "    results = soup.find_all('div', class_='list_text')\n",
-    "        \n",
-    "# Scrape first instance of News Title and Paragraph Text\n",
-    "for result in results:\n",
-    "\n",
-    "    # Error handling\n",
-    "    try:\n",
-    "        # Identify and return news title of listing\n",
-    "        news_title = result.find('div', class_='content_title').text\n",
-    "        # Identify and return price of listing\n",
-    "        paragraph_text = result.find('div', class_='article_teaser_body').text\n",
-    "\n",
-    "\n",
-    "        # Run only if news title and paragraph text are available\n",
-    "        if (news_title and paragraph_text):\n",
-    "            # Print results\n",
-    "            print('-------------')\n",
-    "            print(news_title)\n",
-    "            print(paragraph_text)\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print(e)"
+    "print(soup.select_one('div.list_text'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "f9861596",
+   "execution_count": 9,
+   "id": "768f1aff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Examine the results, then determine element that contains sought info\n",
-    "results = soup.find_all('div', class_='list_text')\n",
-    "\n",
-    "# Scrape first instance of News Title and Paragraph Text\n",
-    "for result in results:\n",
-    "    \n",
-    "    # Error handling\n",
-    "    try:\n",
-    "        # Identify and return news title of listing\n",
-    "        news_title = result.find('div', class_='content_title').text\n",
-    "        # Identify and return price of listing\n",
-    "        paragraph_text = result.find('div', class_='article_teaser_body').text\n",
-    "\n",
-    "\n",
-    "        # Run only if news title and paragraph text are available\n",
-    "        if (news_title and paragraph_text):\n",
-    "            # Print results\n",
-    "            print('-------------')\n",
-    "            print(news_title)\n",
-    "            print(paragraph_text)\n",
-    "\n",
-    "            # Dictionary to be inserted as a MongoDB document\n",
-    "            post = {\n",
-    "                'news_title': news_title,\n",
-    "                'paragraph_text': paragraph_text,\n",
-    "            }\n",
-    "\n",
-    "            collection.insert_one(post)\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print(e)"
+    "news_title = soup.find_all('div', class_='col-md-8')[0].find('div',class_='content_title').text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "5454b8ae",
+   "execution_count": 10,
+   "id": "f7aa5df6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Display items in MongoDB collection\n",
-    "listings = db.items.find()\n",
-    "\n",
-    "for listing in listings:\n",
-    "    print(listing)"
+    "news_p = soup.find_all('div', class_='col-md-8')[0].find('div',class_='article_teaser_body').text"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4ee6f2c",
+   "id": "7e0b3b45",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbaadf1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#browser.click to click on each link\n",
+    "#browser.back to return to main page\n",
+    "#save the title and image urls to a dictionary \n",
+    "#save all info to mongo db\n",
+    "\n",
+    "#activities: wk 12, day 3, activities 5-10 (esp 10)\n",
+    "\n",
+    "#quit browser \n",
+    "\n",
+    "#when creating flask app, you may need to introduce \"time.sleep\" between different browser visits"
+   ]
   }
  ],
  "metadata": {
