--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 94,
    "id": "9f902b7d",
    "metadata": {},
    "outputs": [],
@@ -10,14 +10,18 @@
     "# Dependencies\n",
     "from splinter import Browser\n",
     "from bs4 import BeautifulSoup\n",
-    "from webdriver_manager.chrome import ChromeDriverManager"
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "import requests\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "id": "913fe554",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -39,32 +43,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "700972c6",
+   "cell_type": "markdown",
+   "id": "11d61853",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# NASA Mars News"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "81cd5cb2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a3120716",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "id": "6497f696",
    "metadata": {},
    "outputs": [],
@@ -72,6 +60,7 @@
     "# URL of page to be scraped\n",
     "url = 'https://redplanetscience.com/'\n",
     "\n",
+    "# Visit url\n",
     "browser.visit(url)\n",
     "\n",
     "# Create BeautifulSoup object; parse with 'html.parser'\n",
@@ -80,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "id": "82378777",
    "metadata": {},
    "outputs": [
@@ -90,8 +79,8 @@
      "text": [
       "<div class=\"list_text\">\n",
       "<div class=\"list_date\">October 7, 2021</div>\n",
-      "<div class=\"content_title\">NASA's Perseverance Rover Mission Getting in Shape for Launch</div>\n",
-      "<div class=\"article_teaser_body\">Stacking spacecraft components on top of each other is one of the final assembly steps before a mission launches to the Red Planet. </div>\n",
+      "<div class=\"content_title\">Virginia Middle School Student Earns Honor of Naming NASA's Next Mars Rover</div>\n",
+      "<div class=\"article_teaser_body\">NASA chose a seventh-grader from Virginia as winner of the agency's \"Name the Rover\" essay contest. Alexander Mather's entry for \"Perseverance\" was voted tops among 28,000 entries. </div>\n",
       "</div>\n"
      ]
     }
@@ -102,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "id": "768f1aff",
    "metadata": {},
    "outputs": [],
@@ -112,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "id": "f7aa5df6",
    "metadata": {},
    "outputs": [],
@@ -121,9 +110,384 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4941da65",
+   "metadata": {},
+   "source": [
+    "# JPL Mars Space Images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "dedd6f1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# URL of page to be scraped\n",
+    "images_url = 'https://spaceimages-mars.com/'\n",
+    "\n",
+    "# Visit url\n",
+    "browser.visit(images_url)\n",
+    "\n",
+    "# Create BeautifulSoup object; parse with 'html.parser'\n",
+    "soup = BeautifulSoup(browser.html, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "231acb7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://spaceimages-mars.com/image/featured/mars2.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "img_url_ext = soup.find_all('a', class_='showimg fancybox-thumbs')[0].attrs['href']\n",
+    "featured_image_url = images_url + img_url_ext\n",
+    "print(featured_image_url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "632762a4",
+   "metadata": {},
+   "source": [
+    "# Mars Facts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "58b41b85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# URL of page to be scraped\n",
+    "facts_url = 'https://galaxyfacts-mars.com/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "38c268b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[                         0                1                2\n",
+       " 0  Mars - Earth Comparison             Mars            Earth\n",
+       " 1                Diameter:         6,779 km        12,742 km\n",
+       " 2                    Mass:  6.39 × 10^23 kg  5.97 × 10^24 kg\n",
+       " 3                   Moons:                2                1\n",
+       " 4       Distance from Sun:   227,943,824 km   149,598,262 km\n",
+       " 5          Length of Year:   687 Earth days      365.24 days\n",
+       " 6             Temperature:     -87 to -5 °C      -88 to 58°C,\n",
+       "                       0                              1\n",
+       " 0  Equatorial Diameter:                       6,792 km\n",
+       " 1       Polar Diameter:                       6,752 km\n",
+       " 2                 Mass:  6.39 × 10^23 kg (0.11 Earths)\n",
+       " 3                Moons:          2 ( Phobos & Deimos )\n",
+       " 4       Orbit Distance:       227,943,824 km (1.38 AU)\n",
+       " 5         Orbit Period:           687 days (1.9 years)\n",
+       " 6  Surface Temperature:                   -87 to -5 °C\n",
+       " 7         First Record:              2nd millennium BC\n",
+       " 8          Recorded By:           Egyptian astronomers]"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tables = pd.read_html(facts_url)\n",
+    "tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "cedb7420",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fact Descriptor</th>\n",
+       "      <th>Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Equatorial Diameter:</td>\n",
+       "      <td>6,792 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Polar Diameter:</td>\n",
+       "      <td>6,752 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mass:</td>\n",
+       "      <td>6.39 × 10^23 kg (0.11 Earths)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Moons:</td>\n",
+       "      <td>2 ( Phobos &amp; Deimos )</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Orbit Distance:</td>\n",
+       "      <td>227,943,824 km (1.38 AU)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Orbit Period:</td>\n",
+       "      <td>687 days (1.9 years)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Surface Temperature:</td>\n",
+       "      <td>-87 to -5 °C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>First Record:</td>\n",
+       "      <td>2nd millennium BC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Recorded By:</td>\n",
+       "      <td>Egyptian astronomers</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Fact Descriptor                          Value\n",
+       "0  Equatorial Diameter:                       6,792 km\n",
+       "1       Polar Diameter:                       6,752 km\n",
+       "2                 Mass:  6.39 × 10^23 kg (0.11 Earths)\n",
+       "3                Moons:          2 ( Phobos & Deimos )\n",
+       "4       Orbit Distance:       227,943,824 km (1.38 AU)\n",
+       "5         Orbit Period:           687 days (1.9 years)\n",
+       "6  Surface Temperature:                   -87 to -5 °C\n",
+       "7         First Record:              2nd millennium BC\n",
+       "8          Recorded By:           Egyptian astronomers"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mars_facts_df = tables[1]\n",
+    "mars_facts_df.columns = [\"Fact Descriptor\", \"Value\"]\n",
+    "mars_facts_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "d2ed245f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Fact Descriptor</th>\\n      <th>Value</th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>0</th>\\n      <td>Equatorial Diameter:</td>\\n      <td>6,792 km</td>\\n    </tr>\\n    <tr>\\n      <th>1</th>\\n      <td>Polar Diameter:</td>\\n      <td>6,752 km</td>\\n    </tr>\\n    <tr>\\n      <th>2</th>\\n      <td>Mass:</td>\\n      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n    </tr>\\n    <tr>\\n      <th>3</th>\\n      <td>Moons:</td>\\n      <td>2 ( Phobos &amp; Deimos )</td>\\n    </tr>\\n    <tr>\\n      <th>4</th>\\n      <td>Orbit Distance:</td>\\n      <td>227,943,824 km (1.38 AU)</td>\\n    </tr>\\n    <tr>\\n      <th>5</th>\\n      <td>Orbit Period:</td>\\n      <td>687 days (1.9 years)</td>\\n    </tr>\\n    <tr>\\n      <th>6</th>\\n      <td>Surface Temperature:</td>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n    <tr>\\n      <th>7</th>\\n      <td>First Record:</td>\\n      <td>2nd millennium BC</td>\\n    </tr>\\n    <tr>\\n      <th>8</th>\\n      <td>Recorded By:</td>\\n      <td>Egyptian astronomers</td>\\n    </tr>\\n  </tbody>\\n</table>'"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mars_facts_html_table = mars_facts_df.to_html()\n",
+    "mars_facts_html_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "d78581af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<table border=\"1\" class=\"dataframe\">\n",
+      "  <thead>\n",
+      "    <tr style=\"text-align: right;\">\n",
+      "      <th></th>\n",
+      "      <th>Fact Descriptor</th>\n",
+      "      <th>Value</th>\n",
+      "    </tr>\n",
+      "  </thead>\n",
+      "  <tbody>\n",
+      "    <tr>\n",
+      "      <th>0</th>\n",
+      "      <td>Equatorial Diameter:</td>\n",
+      "      <td>6,792 km</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>1</th>\n",
+      "      <td>Polar Diameter:</td>\n",
+      "      <td>6,752 km</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>2</th>\n",
+      "      <td>Mass:</td>\n",
+      "      <td>6.39 × 10^23 kg (0.11 Earths)</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>3</th>\n",
+      "      <td>Moons:</td>\n",
+      "      <td>2 ( Phobos &amp; Deimos )</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>4</th>\n",
+      "      <td>Orbit Distance:</td>\n",
+      "      <td>227,943,824 km (1.38 AU)</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>5</th>\n",
+      "      <td>Orbit Period:</td>\n",
+      "      <td>687 days (1.9 years)</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>6</th>\n",
+      "      <td>Surface Temperature:</td>\n",
+      "      <td>-87 to -5 °C</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>7</th>\n",
+      "      <td>First Record:</td>\n",
+      "      <td>2nd millennium BC</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>8</th>\n",
+      "      <td>Recorded By:</td>\n",
+      "      <td>Egyptian astronomers</td>\n",
+      "    </tr>\n",
+      "  </tbody>\n",
+      "</table>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mars_facts_html_table)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8fb89c6b",
+   "metadata": {},
+   "source": [
+    "# Mars Hemispheres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "13b08873",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# URL of page to be scraped\n",
+    "hemi_url = 'https://marshemispheres.com/'\n",
+    "\n",
+    "# Visit url\n",
+    "browser.visit(hemi_url)\n",
+    "\n",
+    "# Create BeautifulSoup object; parse with 'html.parser'\n",
+    "soup = BeautifulSoup(browser.html, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "a7d2374a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'valles.html'"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mars_hemispheres = soup.find_all('div', class_='item')\n",
+    "\n",
+    "title_list = []\n",
+    "url_list = []\n",
+    "\n",
+    "for i in mars_hemispheres:\n",
+    "    # Collect title\n",
+    "    title_list.append(i.find('div', class_='description').find('h3').text)\n",
+    "    \n",
+    "    # Collct image link by browsing to hemisphere page\n",
+    "    image_link = i.find('a', class_='itemLink product-item')['href']\n",
+    "\n",
+    "    #####STOPPING POINT#####\n",
+    "    #may need to look immediately above and below##\n",
+    "    ######\n",
+    "    \n",
+    "image_link\n",
+    "# title_list\n",
+    "# url_list"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e0b3b45",
+   "id": "f314875a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61ef36e3",
    "metadata": {},
    "outputs": [],
    "source": []
