finished scraping section

--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 1,
    "id": "9f902b7d",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "913fe554",
    "metadata": {
     "scrolled": false
@@ -32,7 +32,9 @@
       "====== WebDriver manager ======\n",
       "Current google-chrome version is 94.0.4606\n",
       "Get LATEST driver version for 94.0.4606\n",
-      "Driver [/Users/bradleybarker/.wdm/drivers/chromedriver/mac64/94.0.4606.61/chromedriver] found in cache\n"
+      "Get LATEST driver version for 94.0.4606\n",
+      "Trying to download new driver from https://chromedriver.storage.googleapis.com/94.0.4606.61/chromedriver_mac64.zip\n",
+      "Driver has been saved in cache [/Users/bradleybarker/.wdm/drivers/chromedriver/mac64/94.0.4606.61]\n"
      ]
     }
    ],
@@ -52,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "6497f696",
    "metadata": {},
    "outputs": [],
@@ -69,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "id": "82378777",
    "metadata": {},
    "outputs": [
@@ -78,9 +80,9 @@
      "output_type": "stream",
      "text": [
       "<div class=\"list_text\">\n",
-      "<div class=\"list_date\">October 7, 2021</div>\n",
-      "<div class=\"content_title\">Virginia Middle School Student Earns Honor of Naming NASA's Next Mars Rover</div>\n",
-      "<div class=\"article_teaser_body\">NASA chose a seventh-grader from Virginia as winner of the agency's \"Name the Rover\" essay contest. Alexander Mather's entry for \"Perseverance\" was voted tops among 28,000 entries. </div>\n",
+      "<div class=\"list_date\">October 11, 2021</div>\n",
+      "<div class=\"content_title\">Alabama High School Student Names NASA's Mars Helicopter</div>\n",
+      "<div class=\"article_teaser_body\">Vaneeza Rupani's essay was chosen as the name for the small spacecraft, which will mark NASA's first attempt at powered flight on another planet.</div>\n",
       "</div>\n"
      ]
     }
@@ -91,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "768f1aff",
    "metadata": {},
    "outputs": [],
@@ -101,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "f7aa5df6",
    "metadata": {},
    "outputs": [],
@@ -119,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "id": "dedd6f1e",
    "metadata": {},
    "outputs": [],
@@ -136,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 8,
    "id": "231acb7f",
    "metadata": {},
    "outputs": [
@@ -164,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 9,
    "id": "58b41b85",
    "metadata": {},
    "outputs": [],
@@ -175,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 10,
    "id": "38c268b6",
    "metadata": {},
    "outputs": [
@@ -202,7 +204,7 @@
        " 8          Recorded By:           Egyptian astronomers]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 11,
    "id": "cedb7420",
    "metadata": {},
    "outputs": [
@@ -306,7 +308,7 @@
        "8          Recorded By:           Egyptian astronomers"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 12,
    "id": "d2ed245f",
    "metadata": {},
    "outputs": [
@@ -329,7 +331,7 @@
        "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Fact Descriptor</th>\\n      <th>Value</th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>0</th>\\n      <td>Equatorial Diameter:</td>\\n      <td>6,792 km</td>\\n    </tr>\\n    <tr>\\n      <th>1</th>\\n      <td>Polar Diameter:</td>\\n      <td>6,752 km</td>\\n    </tr>\\n    <tr>\\n      <th>2</th>\\n      <td>Mass:</td>\\n      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n    </tr>\\n    <tr>\\n      <th>3</th>\\n      <td>Moons:</td>\\n      <td>2 ( Phobos &amp; Deimos )</td>\\n    </tr>\\n    <tr>\\n      <th>4</th>\\n      <td>Orbit Distance:</td>\\n      <td>227,943,824 km (1.38 AU)</td>\\n    </tr>\\n    <tr>\\n      <th>5</th>\\n      <td>Orbit Period:</td>\\n      <td>687 days (1.9 years)</td>\\n    </tr>\\n    <tr>\\n      <th>6</th>\\n      <td>Surface Temperature:</td>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n    <tr>\\n      <th>7</th>\\n      <td>First Record:</td>\\n      <td>2nd millennium BC</td>\\n    </tr>\\n    <tr>\\n      <th>8</th>\\n      <td>Recorded By:</td>\\n      <td>Egyptian astronomers</td>\\n    </tr>\\n  </tbody>\\n</table>'"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 13,
    "id": "d78581af",
    "metadata": {},
    "outputs": [
@@ -422,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 14,
    "id": "13b08873",
    "metadata": {},
    "outputs": [],
@@ -439,76 +441,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 64,
    "id": "a7d2374a",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'valles.html'"
-      ]
-     },
-     "execution_count": 147,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "title_list: ['Cerberus Hemisphere Enhanced', 'Schiaparelli Hemisphere Enhanced', 'Syrtis Major Hemisphere Enhanced', 'Valles Marineris Hemisphere Enhanced'], url_list: ['https://marshemispheres.com/images/cerberus_enhanced.tif', 'https://marshemispheres.com/images/schiaparelli_enhanced.tif', 'https://marshemispheres.com/images/syrtis_major_enhanced.tif', 'https://marshemispheres.com/images/valles_marineris_enhanced.tif']\n"
+     ]
     }
    ],
    "source": [
     "mars_hemispheres = soup.find_all('div', class_='item')\n",
     "\n",
+    "# Create list for each hemisphere title and image url\n",
     "title_list = []\n",
     "url_list = []\n",
     "\n",
     "for i in mars_hemispheres:\n",
-    "    # Collect title\n",
+    "    # Collect titles and append to list\n",
     "    title_list.append(i.find('div', class_='description').find('h3').text)\n",
     "    \n",
-    "    # Collct image link by browsing to hemisphere page\n",
-    "    image_link = i.find('a', class_='itemLink product-item')['href']\n",
+    "    # Collect image link by browsing to hemisphere page\n",
+    "    img_page_link = i.find('a', class_='itemLink product-item')['href']\n",
     "\n",
-    "    #####STOPPING POINT#####\n",
-    "    #may need to look immediately above and below##\n",
-    "    ######\n",
+    "    # String together main url + image page link and click on link\n",
+    "    browser.visit(f'{hemi_url}{img_page_link}')\n",
     "    \n",
-    "image_link\n",
-    "# title_list\n",
-    "# url_list"
+    "    # Create BeautifulSoup object; parse with 'html.parser'\n",
+    "    img_page_soup = BeautifulSoup(browser.html, 'html.parser')\n",
+    "    \n",
+    "    # Locate image url for full-resolution photo\n",
+    "    img_url = img_page_soup.find('div', class_='downloads').find_all('li')[1].find('a')['href']\n",
+    "    \n",
+    "    # Append image urls to a list \n",
+    "    url_list.append(f'{hemi_url}{img_url}')\n",
+    "    \n",
+    "    # Go back to home page\n",
+    "    browser.back\n",
+    "    \n",
+    "\n",
+    "print(f'title_list: {title_list}, url_list: {url_list}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f314875a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61ef36e3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bbaadf1b",
+   "execution_count": 68,
+   "id": "1e73aba5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#browser.click to click on each link\n",
-    "#browser.back to return to main page\n",
-    "#save the title and image urls to a dictionary \n",
-    "#save all info to mongo db\n",
+    "browser.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "f314875a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'title': 'Cerberus Hemisphere Enhanced',\n",
+       "  'img_url': 'https://marshemispheres.com/images/cerberus_enhanced.tif'},\n",
+       " {'title': 'Schiaparelli Hemisphere Enhanced',\n",
+       "  'img_url': 'https://marshemispheres.com/images/schiaparelli_enhanced.tif'},\n",
+       " {'title': 'Syrtis Major Hemisphere Enhanced',\n",
+       "  'img_url': 'https://marshemispheres.com/images/syrtis_major_enhanced.tif'},\n",
+       " {'title': 'Valles Marineris Hemisphere Enhanced',\n",
+       "  'img_url': 'https://marshemispheres.com/images/valles_marineris_enhanced.tif'}]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a list of dictionaries \n",
+    "hemisphere_image_urls = []\n",
     "\n",
-    "#activities: wk 12, day 3, activities 5-10 (esp 10)\n",
-    "\n",
-    "#quit browser \n",
-    "\n",
-    "#when creating flask app, you may need to introduce \"time.sleep\" between different browser visits"
+    "for i, j in zip(title_list, url_list):\n",
+    "    hemisphere_image_urls.append({\"title\": i, \"img_url\": j})\n",
+    "    \n",
+    "hemisphere_image_urls"
    ]
   }
  ],
